@@ -1,10 +1,8 @@
 package exercise.controller.users;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseStatus;
@@ -24,21 +22,16 @@ public class PostsController {
     private final List<Post> posts = Data.getPosts();
 
     @GetMapping("users/{id}/posts")
-    @ResponseStatus(HttpStatus.OK)
-    public ResponseEntity<List<Post>> getPosts(@PathVariable int id) {
-        return ResponseEntity.ok().body(posts.stream().filter(p -> p.getUserId() == id).collect(Collectors.toList()));
+    public List<Post> getPosts(@PathVariable Integer id) {
+        return posts.stream().filter(p -> p.getUserId() == id).toList();
     }
 
     @PostMapping("users/{id}/posts")
     @ResponseStatus(HttpStatus.CREATED)
-    public ResponseEntity<Post> createPostOfUser(@PathVariable int id, @RequestBody Post post) {
-        Post newPost = new Post();
-        newPost.setUserId(id);
-        newPost.setSlug(post.getSlug());
-        newPost.setTitle(post.getTitle());
-        newPost.setBody(post.getBody());
-        posts.add(newPost);
-        return ResponseEntity.status(HttpStatus.CREATED).body(newPost);
+    public Post createPostOfUser(@PathVariable Integer id, @RequestBody Post post) {
+        post.setUserId(id);
+        posts.add(post);
+        return post;
     }
 }
 
